<resources>

    <string name="descripcion">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas , las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <string name="name_league">Nombre Liga</string>


    <!--Variables para la sección de equipos-->
    <string name="team_name">Nombre del Equipo</string>
    <string name="team_stadium_tag">Estadio: </string>
    <string name="team_formed_year">Año: </string>
    <string name="league_name_tag">Liga: </string>
    <string name="team_country">País: </string>
    <string name="team_gender_tag">Género: </string>
    <string name="app_name">Soccer Score</string>
    <string name="btn01">Listado</string>
    <string name="btn02">Resultados</string>
    <string name="btn03">Inicio</string>
    <string name="btn04">Próximos Partidos</string>
    <string name="btn05">Acerca de</string>
    <string name="parrafo">soccer Score es una app desarrollada para ver los resultados y proximos partidos, esta app fue desarrollada por un equipo multidisciplinario de personas comprometidas</string>
    <string name="product_owner">Product Owner: Dairon Rosas</string>
    <string name="scrum">Scrum Master: Daniela Silva</string>
    <string name="dev01">Developer: Jose Pabon</string>
    <string name="dev02">Developer: Luis Mantilla</string>
    <string name="dev03">Developer: Johan Ulloa</string>
    <string name="dev04">Developer: Marco Mojica</string>
    <string name="logo">Logo Soccer Score</string>
    <string name="segunda_Activity">Estas en la Segunda Activity!!!</string>
    <string name="button">regresar</string>
    <string name="mintic">MisiónTic 2022</string>
    <string name="universidad">UNAB</string>

</resources>