<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailTeam">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivBannerTeam"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/teamslogo" />

            <ImageView
                android:id="@+id/ivLogotTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/teamslogo" />

            <ImageView
                android:id="@+id/ivJerseyTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/teamslogo" />

            <TextView
                android:id="@+id/tvNameTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_name"
                android:textAlignment="center"
                android:textColor="#404040"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/team_stadium_tag"
                        android:textColor="#404040"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvStadiumName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="#404040"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team_formed_year"
                        android:textColor="#404040"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvTeamFormedYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="#404040"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/league_name_tag"
                        android:textColor="#404040"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvNameLeagueTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="#404040"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team_country"
                        android:textColor="#404040"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvCountryTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="#404040"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/team_gender_tag"
                        android:textColor="#404040"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvGenderTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="TextView"
                        android:textColor="#404040"
                        android:textSize="16sp" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/tvDescriptionTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/descripcion"
                android:textAlignment="center"
                android:textColor="@color/base_text" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/ivInternet"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:autoLink="phone|web"
                        app:srcCompat="@drawable/internet" />

                    <ImageView
                        android:id="@+id/ivFacebook"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/ivInstagram"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/instagram" />

                    <ImageView
                        android:id="@+id/ivTwitter"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/twitter" />

                    <ImageView
                        android:id="@+id/ivYoutube"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/youtube" />
                </TableRow>

            </TableLayout>

            <ImageView
                android:id="@+id/ivStadiumTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/teamslogo" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivFannart1Team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/teamslogo" />

                    <ImageView
                        android:id="@+id/ivFannart2Team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/teamslogo" />

                    <ImageView
                        android:id="@+id/ivFannart3Team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/teamslogo" />

                    <ImageView
                        android:id="@+id/ivFannart4Team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/teamslogo" />
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>